import 'react-native'
import React from 'react'
import ReactShallowRenderer from 'react-test-renderer/shallow'
import MemberDetails, { MemberBio, MemberSkills, MemberCommunities, CommunityRow } from './MemberDetails'

describe('MemberDetails', () => {
  it('matches the last snapshot', () => {
    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberDetails
      person={{id: 1}}
      goToCommunity={() => {}} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })

  it("returns null when there's no person", () => {
    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberDetails />)
    const actual = renderer.getRenderOutput()

    expect(actual).toBeNull
  })
})

describe('MemberBio', () => {
  it('matches the last snapshot', () => {
    const person = {
      bio: 'I live I die!'
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberBio
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })

  it('returns null when bio is empty', () => {
    const person = {
      bio: ''
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberBio
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toBeNull()
  })
})

describe('MemberSkills', () => {
  it('matches the last snapshot', () => {
    const person = {
      skills: [
        {id: 1, name: 'run'},
        {id: 2, name: 'all'},
        {id: 3, name: 'day'}
      ]
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberSkills
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })

  it('returns null when skills is empty', () => {
    const person = {
      skills: []
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberSkills
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toBeNull()
  })
})

describe('MemberCommunities', () => {
  it('matches the last snapshot', () => {
    const person = {
      memberships: [
        {id: 1},
        {id: 2},
        {id: 3}
      ]
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberCommunities
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })

  it('returns null when skills is empty', () => {
    const person = {
      memberships: []
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<MemberCommunities
      person={person} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toBeNull()
  })
})

describe('CommunityRow', () => {
  it('matches the last snapshot', () => {
    const membership = {
      community: {
        id: 23,
        name: 'Great Place',
        memberCount: 432
      },
      hasModeratorRole: false
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<CommunityRow
      membership={membership} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })

  it('handles high member count and moderator role', () => {
    const membership = {
      community: {
        id: 23,
        name: 'Greater Place',
        memberCount: 24495
      },
      hasModeratorRole: true
    }

    const renderer = new ReactShallowRenderer()
    renderer.render(<CommunityRow
      membership={membership} />)
    const actual = renderer.getRenderOutput()

    expect(actual).toMatchSnapshot()
  })
})
